fix overflow x on section

--- a/oneMillioBotProject/src/shared/message-center/message-center.component.scss
+++ b/oneMillioBotProject/src/shared/message-center/message-center.component.scss
@@ -68,6 +68,7 @@
     height: 500px;
     background-color: $white;
     overflow-y: scroll;
+    overflow-x: hidden;
   }
 
   &__chips {
